# my-cli

./: README.md  pyproject.toml
src/my_cli/: my_cli.py
src/my_cli/commands/: click_examples.py  hello.py  rich_examples.py
src/my_cli/utils/: aliased_group.py  click_ctx_obj.py  click_ext.py  click_settings.py  rich_console_ext.py  rich_ext.py
