[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-cli"
version = "0.1.0"
description = "A CLI tool template, based on Click, Rich-Click"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Andy Meng", email = "andy_m129@163.com" }]
dependencies = [
    "Click",
    "configparser>=7.2.0",
    "rich>=14.0.0",
    "rich-click>=1.8.9",
]

[project.scripts]
my-cli = "my_cli.my_cli:cli"
